crates/lang/tests/ui/contract/fail/constructor-self-receiver-02.stderr
error: ink! constructors must have no `self` receiver
  --> tests/ui/contract/fail/constructor-self-receiver-02.rs:10:28
   |
10 |         pub fn constructor(&mut self) -> Self {
   |                            ^^^^^^^^^
